# backend/docs/api.yaml
@@ -43,6 +43,25 @@ paths:
         "500":
           description: Internal Server Error
 
+  /api/v1/auth/validate-token:
+    get:
+      tags:
+        - Auth
+      summary: ValidateToken
+      description: ValidateToken
+      operationId: ValidateToken
+      security:
+        - BearerAuth: []
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+
   /api/v1/users/register:
     post:
       tags:
